# python-lambda-template

./: .bumpversion.cfg  .gitignore  .terraform.lock.hcl  LICENSE  README.md  main.tf  pyproject.toml  versions.tf
tests/unit/: test_handler.py
username_generator/: app.py
