[tool.poetry]
name = "username-generator"
version = "1.1.0"
description = ""
authors = ["Zackery Ayscue <ztayscue@gmail.com>"]
readme = "README.md"
packages = [{include = "username_generator"}]

[tool.poetry.dependencies]
python = "^3.9"
random-username = "^1.0.2"


[tool.poetry.group.dev.dependencies]
aws-sam-cli = "^1.72.0"
pytest = "^7.2.1"
boto3 = "^1.26.64"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.7.1"}
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
